--- a/src/GUI_Layout.ui
+++ b/src/GUI_Layout.ui
@@ -43,6 +43,9 @@
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetDefaultConstraint</enum>
+        </property>
         <item>
          <widget class="QPushButton" name="outputFileButton">
           <property name="sizePolicy">
@@ -57,9 +60,20 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="outputFileLabel">
           <property name="text">
            <string>Output Path</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_8">
+        <item>
+         <widget class="QPushButton" name="ffmpeg">
+          <property name="text">
+           <string>ffmpeg</string>
           </property>
          </widget>
         </item>
