--- a/src/GUI_Layout.ui
+++ b/src/GUI_Layout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>249</width>
-    <height>181</height>
+    <width>365</width>
+    <height>171</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,6 +72,12 @@
        <layout class="QHBoxLayout" name="horizontalLayout_8">
         <item>
          <widget class="QPushButton" name="ffmpeg">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>ffmpeg</string>
           </property>
@@ -88,7 +94,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>249</width>
+     <width>365</width>
      <height>21</height>
     </rect>
    </property>
