--- a/src/gui_layout.ui
+++ b/src/gui_layout.ui
@@ -272,6 +272,9 @@
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
@@ -305,9 +308,34 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>GO</string>
+       <string>GO (Execute all steps)</string>
       </property>
      </widget>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="stepSelection">
+      <item>
+       <widget class="QPushButton" name="stepSelection1Button">
+        <property name="text">
+         <string>Step 1: Decode video</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="stepSelection2Button">
+        <property name="text">
+         <string>Step 2: Interpolate frames</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="stepSelection3Button">
+        <property name="text">
+         <string>Step 3: Encode video</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -317,7 +345,7 @@
      <x>0</x>
      <y>0</y>
      <width>480</width>
-     <height>27</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
