--- a/src/gui_layout.ui
+++ b/src/gui_layout.ui
@@ -308,28 +308,54 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>GO (Execute all steps)</string>
+       <string>Execute</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="stepSelection">
       <item>
-       <widget class="QPushButton" name="stepSelection1Button">
+       <widget class="QCheckBox" name="stepSelection1CheckBox">
         <property name="text">
          <string>Step 1: Decode video</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="stepSelection2Button">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="stepSelection2CheckBox">
         <property name="text">
          <string>Step 2: Interpolate frames</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="stepSelection3Button">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="stepSelection3CheckBox">
         <property name="text">
          <string>Step 3: Encode video</string>
         </property>
